@@ -29,6 +29,7 @@ Fixes:
    * Fix Ctxpopup direction if unknown priority used.
    * Fix diskselector when bounce off and round enabled.
    * Fix bubble info field set.
+   * Escape theme filename correctly.
    
 Removals:
 
